--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "recursive-sw",
   "version": "0.0.0",
   "private": true,
-  "description": "Small description for recursive-sw goes here",
+  "description": "Uses swapi.co for displaying info about star wars",
   "license": "MIT",
-  "author": "",
+  "author": "Yelin Zhang",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -37,7 +37,6 @@
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-resolver": "^4.0.0",
     "ember-source": "~3.1.0",
-    "ember-welcome-page": "^3.0.0",
     "eslint-plugin-ember": "^5.0.0",
     "loader.js": "^4.2.3"
   },
